Enhance error handling in PdlApiConsumer getter #deploy-person-service
Improve logging for getter method errors by capturing specific error messages. Additionally, return an empty list instead of throwing an exception to ensure smoother error recovery.